Raised the z-index on the issues dropdown as it was being covered by other form elements.

--- a/static/css/dropdown.css
+++ b/static/css/dropdown.css
@@ -10,7 +10,8 @@
            visibility:hidden;
            position:absolute;
            top:100%;
-           left:0;}
+           left:0;
+           z-index:1;}
 
 #nav ul li a {padding: 2px;
               border-color:#DDDDDD;
